--- a/dict/styles.css
+++ b/dict/styles.css
@@ -415,7 +415,7 @@ tr:hover {
 }
 
 .privacy-btn:has(input:checked) {
-    background-color: #2196F3;
+    background-color: #2e7d32;
 }
 
 .privacy-btn:has(input:checked) i {
